--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "jquery": ">=3.3.1"
+    "jquery": ">=3.3.1",
+	"node-sass":">=4.11.0"
   },
   "repository": {
     "type": "git",
